Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140521

QML InputMethod crashes

XMLWordPrintable

    • All
    • 6886a8485 (dev), 514b7da02 (6.10), b65ff1456 (tqtc/lts-6.8), 45f839655 (dev), 4791d12a5 (6.10)

      The Virtual Keyboard "supports" InputMethod created with QML. It used to work when invokeMethod magically invoked the JavaScript over the C++ slot. However, it now crashes with a call stack exhaustion error when any of the following functions are called:

      void InputMethod::reset()
      {
          QMetaObject::invokeMethod(this, "reset");
      }
      
      void InputMethod::update()
      {
          QMetaObject::invokeMethod(this, "update");
      }
      
      void InputMethod::clearInputMode()
      {
          QMetaObject::invokeMethod(this, "clearInputMode");
      }
      

       
      It’s clear that this behavior has changed at some point.

      What should be done with this API?

      Note: The QML InputMethod is not actively used by the Virtual Keyboard itself.
       

        For Gerrit Dashboard: QTBUG-140521
        # Subject Branch Project Status CR V

            jakoivik Jarkko Koivikko
            jakoivik Jarkko Koivikko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: