tests/auto/qmlinputmethod/data/layouts/en_GB/numbers.qml
@@ -1,0 +1,19 @@
+// Copyright (C) 2025 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
+
+import QtQuick
+import QtQuick.VirtualKeyboard
+import QtQuick.VirtualKeyboard.Components
+import QtQuick.VirtualKeyboard.Plugins
+
+KeyboardLayout {
+    id: root
+
+    // Using different input method than main.qml
+    inputMethod: PlainInputMethod {}
+    inputMode: InputEngine.InputMode.Numeric
+
+    KeyboardRow {
+        Key { key: Qt.Key_1; text: "1" }
+    }
+}
